--- a/css/main.css
+++ b/css/main.css
@@ -43,12 +43,7 @@ body {
     margin: 0 0.3vw 0 0.3vw;
 }
 
-#patch-bank-controller {
-    padding: 2%;
-}
-
 #patch-bank-controller .patch {
-    background-color: white;
     width: 20%;
     border-radius: 15%;
     height: 100%;
@@ -85,108 +80,45 @@ body {
     border: 4px solid;
 }
 
-@media only screen and (min-width: 900px) {
+.arpeggiator-button-container {
+    width: 100%;
+    height: 90%;
+    margin-left: 2vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
 
-    #controller-container {
-        display: flex;
-        height: 30vmin;
-        justify-content: space-around;
-    }
+.arpeggiator-button {
+    height: 26%;
+    width: 21%;
+    margin-right: 1vw;
+    text-align: center;
+    background-color: #caceb4;
+    border-radius: 0.5vw;
+}
 
-    #visual-controller {
-        margin-right: 1vw;
-        background-color: blueviolet;
-        flex: 1;
-    }
+.arpeggiator-button:hover {
+    background-color: #e9f3b5;
+    cursor: pointer;
+}
 
-    #main-controller {
-        background-color: brown;
-        flex: 1;
-        flex-grow: 4;
+.arpeggiator-button-active {
+    background-color: #e9f3b5;
+}
 
-        display: flex;
-        flex-direction: column;
-    }
+.arpeggiator-button-container-text {
+    width: 100%;
+    text-align: center;
+}
 
-    #modulation-controller {
-        margin-left: 1vw;
-        background-color: cadetblue;
-        flex: 1;
-        width: 2em;
+.hidden {
+    opacity: 0 !important;
+    display: none !important;
+}
 
-        display: flex;
-        flex-direction: column;
-    }
-
-    #sub-controller-1 {
-        flex: 1;
-        background-color: chartreuse;
-        height: 50%;
-        padding: 2vh;
-        margin-bottom: 1vh;
-
-        display: flex;
-    }
-
-    #sub-controller-2 {
-        flex: 1;
-        background-color: coral;
-        height: 50%;
-        padding: 2vh;
-        margin-top: 1vh;
-
-        display: flex;
-    }
-
-    #macro-controller {
-        flex: 1;
-        background-color: aquamarine;
-
-        display: flex;
-        align-items: center;
-    }
-
-    #envelope-controller {
-        flex: 1.4;
-        background-color: cornflowerblue;
-
-        display: flex;
-        align-items: center;
-    }
-
-    #patch-bank-controller {
-        flex: 1;
-        background-color: darkkhaki;
-    }
-
-    #patch-attribute-controller {
-        flex: 1;
-        background-color: darkolivegreen;
-        display: flex;
-    }
-
-    #fm-synth-attribute-controller {
-        display: flex;
-        align-items: center;
-    }
-
-    #time-effects-controller {
-        flex: 1;
-
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-    }
-
-    #volume-modulation {
-        flex: 1;
-    }
-
-    #pitch-modulation {
-        flex: 1;
-    }
-
-    #pan-modulation {
-        flex: 1;
-    }
+.invisible {
+    opacity: 0 !important;
+    visibility: hidden !important;
 }
