--- a/css/mobile-controller.css
+++ b/css/mobile-controller.css
@@ -35,7 +35,27 @@
         grid-template-columns: 100% 100%;
     }
 
+    .dot-navigate-container {
+        height: 6%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
+    .dot-navigate-container > .dot-navigate {
+        height: 1vmin;
+        width: 1vmin;
+        border-radius: 1vmin;
+        background-color: white;
+        opacity: 0.3;
+        margin-right: 1.5vw;
+        transition: 0.3s;
+    }
+
+    .dot-navigate-container > .dot-selected {
+        opacity: 1;
+        box-shadow: 0 0 3px whitesmoke;
+    }
 
     /*General Styles*/
     .widget-container {
@@ -72,10 +92,11 @@
         text-align: right;
     }
 
-
     #sub-controller-2 .patch-specific-widget-container {
         height: 100%;
         width: 100%;
+        display: flex;
+        align-items: center;
     }
 
     #modulation-controller {
@@ -83,9 +104,8 @@
         flex-direction: column;
     }
 
-    #fm-synth-attribute-controller {
-        display: flex;
-        align-items: center;
+    #patch-bank-controller {
+        padding: 2%;
     }
 
     #patch-bank-controller .patch {
